[gd_scene load_steps=8 format=3 uid="uid://v3jycx4ohi87"]

[ext_resource type="Script" uid="uid://dje7k28q4alj" path="res://UI/Layers/LayerConfiguration/LayerDefinitionWidget.gd" id="1_wq2kp"]
[ext_resource type="Texture2D" uid="uid://c3kuxlnuadbrl" path="res://Resources/Icons/ModernLandscapeLab/eyes.svg" id="2_bn2mo"]
[ext_resource type="Texture2D" uid="uid://23k0cl4yv3b3" path="res://Resources/Icons/ModernLandscapeLab/eye_crossed.svg" id="3_vu1ip"]
[ext_resource type="PackedScene" uid="uid://p6cm0acpl15r" path="res://UI/CustomElements/AutoIconButton.tscn" id="4_qgva4"]
[ext_resource type="Texture2D" uid="uid://bgla5bw7tc34a" path="res://Resources/Icons/ModernLandscapeLab/rotate.svg" id="5_r83vu"]
[ext_resource type="Texture2D" uid="uid://dugrgepqgf6ik" path="res://Resources/Icons/ModernLandscapeLab/three_points.svg" id="6_x3x3i"]
[ext_resource type="Script" uid="uid://qmit6soahmki" path="res://UI/Layers/LayerConfiguration/EditWindow.gd" id="7_2bbxs"]

[node name="LayerDefinitionWidget" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wq2kp")

[node name="VBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1

[node name="RightContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VisibilityBox" type="MarginContainer" parent="VBox/RightContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBox/RightContainer/VisibilityBox"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="VisibilityButton" type="TextureButton" parent="VBox/RightContainer/VisibilityBox"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_bn2mo")
texture_pressed = ExtResource("3_vu1ip")

[node name="VSeparator" type="VSeparator" parent="VBox/RightContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBox/RightContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 1
stretch_mode = 6

[node name="NameSizeFix" type="Control" parent="VBox/RightContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Name" type="Label" parent="VBox/RightContainer/NameSizeFix"]
clip_contents = true
layout_mode = 0
offset_right = 180.0
offset_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "123456789101112"

[node name="LeftContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="Reload" parent="VBox/LeftContainer" instance=ExtResource("4_qgva4")]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
icon = ExtResource("5_r83vu")
texture_name = "rotate"

[node name="Edit" parent="VBox/LeftContainer" instance=ExtResource("4_qgva4")]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
icon = ExtResource("6_x3x3i")
texture_name = "three_points"

[node name="EditMenu" type="PopupMenu" parent="VBox"]
auto_translate_mode = 1
size = Vector2i(184, 100)
item_count = 3
item_0/text = "Configure..."
item_1/text = "Translate to layer"
item_1/id = 1
item_2/text = "Show geolayers"
item_2/checkable = 1
item_2/checked = true
item_2/id = 2
script = ExtResource("7_2bbxs")

[node name="ColorMenu" type="PopupMenu" parent="VBox/EditMenu"]
auto_translate_mode = 1

[node name="ObjectMenu" type="PopupMenu" parent="VBox/EditMenu"]
auto_translate_mode = 1
